force-app/main/default/objects/Contratto_dealer__c/Contratto_dealer__c.object-meta.xml
<CustomObject>
    <label>Contratto dealer</label>
    <nameField>
        <label>Nome Contratto</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contratti dealer</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>