force-app/main/default/objects/Contratto_dealer__c/fields/Contributo_marketing__c.field-meta.xml
<CustomField>
    <fullName>Contributo_marketing__c</fullName>
    <label>Contributo marketing</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>