force-app/main/default/objects/Contratto_dealer__c/fields/Data_attivazione__c.field-meta.xml
<CustomField>
    <fullName>Data_attivazione__c</fullName>
    <label>Data attivazione</label>
    <type>Date</type>
</CustomField>