force-app/main/default/objects/Contratto_dealer__c/fields/Durata_mesi__c.field-meta.xml
<CustomField>
    <fullName>Durata_mesi__c</fullName>
    <label>Durata (mesi)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>