force-app/main/default/objects/Contratto_dealer__c/fields/Esclusiva_territoriale__c.field-meta.xml
<CustomField>
    <fullName>Esclusiva_territoriale__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Esclusiva territoriale</label>
    <type>Checkbox</type>
</CustomField>