force-app/main/default/objects/Contratto_dealer__c/fields/Exclusive_territories__c.field-meta.xml
<CustomField>
    <fullName>Exclusive_territories__c</fullName>
    <label>Exclusive territories</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>