force-app/main/default/objects/Contratto_dealer__c/fields/Installation_ability__c.field-meta.xml
<CustomField>
    <fullName>Installation_ability__c</fullName>
    <label>Installation ability on</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>MTL</fullName>
            </value>
            <value>
                <fullName>MTP</fullName>
            </value>
            <value>
                <fullName>FOV</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>