force-app/main/default/objects/Contratto_dealer__c/fields/Machines__c.field-meta.xml
<CustomField>
    <fullName>Machines__c</fullName>
    <description>All kind of machines the reseller is authorized to resell.</description>
    <inlineHelpText>All kind of machines the reseller is authorized to resell.</inlineHelpText>
    <label>Sales ability on</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>MTL</fullName>
                <default>true</default>
                <label>MTL</label>
            </value>
            <value>
                <fullName>MTP</fullName>
            </value>
            <value>
                <fullName>FOV</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>