force-app/main/default/objects/Contratto_dealer__c/fields/Magazzino__c.field-meta.xml
<CustomField>
    <fullName>Magazzino__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Magazzino</label>
    <type>Checkbox</type>
</CustomField>