force-app/main/default/objects/Contratto_dealer__c/fields/max_esposure__c.field-meta.xml
<CustomField>
    <fullName>max_esposure__c</fullName>
    <label>max esposure</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>