force-app/main/default/objects/Contratto_dealer__c/fields/N_macchine_a_prezzo_speciale__c.field-meta.xml
<CustomField>
    <fullName>N_macchine_a_prezzo_speciale__c</fullName>
    <label>N. macchine a prezzo speciale</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>