force-app/main/default/objects/Contratto_dealer__c/fields/Non_exclusive_territories__c.field-meta.xml
<CustomField>
    <fullName>Non_exclusive_territories__c</fullName>
    <label>Non exclusive territories</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>