force-app/main/default/objects/Contratto_dealer__c/fields/Sconto_riservato__c.field-meta.xml
<CustomField>
    <fullName>Sconto_riservato__c</fullName>
    <label>Sconto riservato</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>