force-app/main/default/objects/Contratto_dealer__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Attivo</fullName>
            </value>
            <value>
                <fullName>Disattivato</fullName>
            </value>
            <value>
                <fullName>Scaduto</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>